--- a/Develop/index.html
+++ b/Develop/index.html
@@ -40,7 +40,7 @@
         in the finished product. Remember to delete this comment once the
         code is implemented.
         -->
-
+      <template>
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
@@ -68,11 +68,14 @@
         </button>
       </div>
     </div>
+  </template>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+    dayjs().format()
+    </script>
 
     <script src="script.js"></script>
   </body>
